dataset1235/2025-2/805158916/users/1147723658/executions/1584167357_997093868.log
== RUN (2025-08-27 14:40:05)
-- CODE: 
a = int(input("Digite um numero:"))
b = int(input("Digite um numero:"))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Digite um numero:Digite um numero:20000
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Digite um numero:Digite um numero:5
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Digite um numero:Digite um numero:68
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Digite um numero:Digite um numero:185
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Digite um numero:Digite um numero:44
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Digite um numero:Digite um numero:108
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:39:09)
-- CODE: 
a = int float(input("Digite um numero: "))
b = int float(input("Digite um numero"))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero: "))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero: "))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero: "))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero: "))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero: "))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero: "))
            ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:39:31)
-- CODE: 
a = int float(input("Digite um numero:"))
b = int float(input("Digite um numero:"))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero:"))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero:"))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero:"))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero:"))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero:"))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero:"))
            ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:39:11)
-- CODE: 
a = int float(input("Digite um numero: "))
b = int float(input("Digite um numero"))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero: "))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero: "))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero: "))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero: "))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero: "))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = int float(input("Digite um numero: "))
            ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:40:06)
-- CODE: 
a = int(input("Digite um numero:"))
b = int(input("Digite um numero:"))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Digite um numero:Digite um numero:20000
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Digite um numero:Digite um numero:5
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Digite um numero:Digite um numero:68
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Digite um numero:Digite um numero:185
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Digite um numero:Digite um numero:44
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Digite um numero:Digite um numero:108
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
